--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Birthday of Raumanian's King</title>
+  <title>Birthday of Raumanian's King🥬</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
@@ -14,7 +14,7 @@
   </div>
 
   <div class="card hidden" id="message">
-      <h1>🎉 Chúc Mừng Sinh Nhật! 🎂</h1>
+      <h1>🎉 Birthday of Raumanian's King🥬</h1>
       <p id="birthdayText"></p>
   </div>
 
