--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="card hidden" id="message">
       <h1>🎉 Birthday of Raumanian's King🥬</h1>
-      <p id="BirthdayText ";"></p>
+      <p id="birthdayText ";"></p>
   </div>
 
   <audio id="birthdayMusic" src="./music_final.MP3" loop></audio>
