--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
   </div>
 
   <div class="card hidden" id="message">
-      <h1>🎉 Birthday of Raumanian's King🥬</h1>
+      <h1>🎉 Chúc mừng sinh nhật bạn Gia Huy – Người đồng đội trên sân cỏ và tri kỷ tuổi học trò!
+
+Nhớ những ngày tháng “chinh chiến” trên sân đá banh, từng trận đấu không phân thắng bại, từng cú sút căng như đời học sinh năm cuối. Mồ hôi thì chảy như suối, nhưng tình bạn thì cũng vì thế mà lớn dần theo từng nhịp bóng lăn. 🥳🔥`,
+      `Rồi những hôm kéo nhau đi Luxury Billiard, đứa thì đánh bi, đứa thì lo canh giờ, đứa thì… bày trò chọc phá. Cứ thế mà quen nhau, gắn bó chẳng cần lý do, chỉ cần vài trận banh, vài cú bi trượt là đủ để trở thành bạn thân.
+
+Tuy những giải đấu tụi mình tham gia đều thua te tua, nhưng chính những thất bại đó lại đem đến những cảm xúc và trải nghiệm mà không một cúp vô địch nào có thể sánh bằng.`,
+      `Sinh nhật này, tớ chúc bạn thật nhiều sức khỏe, hành trình du học ở Trung Quốc thuận buồm xuôi gió, học hành tấn tới.
+
+Dù mai này có xa xôi cách trở, hãy luôn nhớ: xa mặt chứ đừng cách lòng. Chúc mừng sinh nhật bạn – người bạn không chỉ đá banh cùng, mà còn là một phần của thanh xuân tôi! 🎁🎉`</h1>
       <p id="birthdayText ";"></p>
   </div>
 
