--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ Dù mai này có xa xôi cách trở, hãy luôn nhớ: xa mặt chứ đừng c
   </div>
 
   <audio id="birthdayMusic" src="./music_final.MP3" loop></audio>
-  <script src="./index.js"></script>
-
+<script src="https://raw.githubusercontent.com/tinhonnn/tintin/main/index.js"></script>
 </body>
 </html>
