--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="card hidden" id="message">
-      🎉 Chúc mừng sinh nhật bạn Gia Huy – Người đồng đội trên sân cỏ và tri kỷ tuổi học trò!
+     </h1> 🎉 Chúc mừng sinh nhật bạn Gia Huy – Người đồng đội trên sân cỏ và tri kỷ tuổi học trò!
 
 Nhớ những ngày tháng “chinh chiến” trên sân đá banh, từng trận đấu không phân thắng bại, từng cú sút căng như đời học sinh năm cuối. Mồ hôi thì chảy như suối, nhưng tình bạn thì cũng vì thế mà lớn dần theo từng nhịp bóng lăn. 🥳🔥`,
       `Rồi những hôm kéo nhau đi Luxury Billiard, đứa thì đánh bi, đứa thì lo canh giờ, đứa thì… bày trò chọc phá. Cứ thế mà quen nhau, gắn bó chẳng cần lý do, chỉ cần vài trận banh, vài cú bi trượt là đủ để trở thành bạn thân.
